@@ -1,8 +1,8 @@
 Package: RcppZiggurat
 Type: Package
 Title: 'Rcpp' Integration of Different "Ziggurat" Normal RNG Implementations
-Version: 0.1.3
-Date: 2015-07-25
+Version: 0.1.3.1
+Date: 2017-09-26
 Author: Dirk Eddelbuettel <edd@debian.org>
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The Ziggurat generator for normally distributed random numbers,
@@ -10,13 +10,9 @@ Description: The Ziggurat generator for normally distributed random numbers,
  upon a few times starting with Leong et al (JSS, 2005). This package provides
  an aggregation in order to compare different implementations. The goal is to
  provide an 'faster but good enough' alternative for use with R and C++ code. 
- .
- The package is still in an early state. Unless you know what you are doing,
- sticking with the generators provided by R may be a good idea as these have
- been extremely diligently tested. 
 License: GPL (>= 2)
 Depends: R (>= 3.0.0)
 Imports: Rcpp, parallel, graphics, stats, utils
-Suggests: highlight, rbenchmark, microbenchmark, lattice
-VignetteBuilder: highlight
+Suggests: rbenchmark, microbenchmark, lattice, knitr, rmarkdown, pinp
+VignetteBuilder: knitr
 LinkingTo: Rcpp, RcppGSL
