@@ -4,5 +4,6 @@ rm -rvf	src/*.o src/*.so src/symbols.rds \
     	vignettes/auto/ \
 	vignettes/*.aux vignettes/*.log vignettes/.out \
         vignettes/*.bbl vignettes/*.blg vignettes/*.pdf \
-        vignettes/*.tex vignettes/*.tpt \
+        vignettes/*.tex vignettes/*.tpt vignettes/*.xwm \
+        vignettes/jss.bst vignettes/pinp.cls \
         *~ */*~
