@@ -1,3 +1,10 @@
+2017-09-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* vignettes/RcppZiggurat.Rmd: Renamed, now uses pinp package
+	* vignettes/.install_extras.inactive: No longer install .bib
+
 2017-08-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Use run.sh from r-travis
